# octopost

./: .gitignore  README.md  pyproject.toml
src/octopost/: README.md  handling.py  parsing.py  postproc.py  reader.py
tests/: test.py
